[Video] Fix DCHECK crash in PauseVideoIfHidden

WMPI::OnFrameHidden() can get called when the frame is closed.
WMPI::IsHidden() will return false in this case, however it's assumed to
return true in OnFrameHidden and the methods called from there.

BUG=684256
TEST=manual

Review-Url: https://codereview.chromium.org/2653553005
Cr-Commit-Position: refs/heads/master@{#445869}

Former-commit-id: 5f91d1754a7ffa39cff9619db090b91b8d1b4a98